replace JSONObject/JSONArray type with Map/List, since LinkedHashMap keeps order of params